# sleek

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  command_stats.json  contribution.md
.github/: FUNDING.yml
.github/workflows/: 0pirate_review.yml
src/: main.rs
