[package]
name = "sleek"
version = "0.1.0"
edition = "2021"
authors = ["Arunmadhavan Evr"]
description = "🚀 A sleek CLI tool to track and optimize Cargo commands."
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/cargo-sleek"
keywords = ["cargo", "cli", "tracking", "rust"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "sleek"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
chrono = "0.4"

[build-dependencies]
cargo_metadata = "0.15"

[profile.release]
strip = true
lto = true
opt-level = "z"