[package]
name = "cargo-sleek"
version = "1.1.0"
edition = "2021"
authors = ["Arunmadhavan Evr"]
description = "🚀 A sleek CLI tool to track and optimize Cargo commands."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arunmadhavan28/sleek"
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/Arunmadhavan28/sleek"
documentation = "https://docs.rs/cargo-sleek"

[[bin]]
name = "cargo-sleek"
path = "src/main.rs"

[dependencies]
# CLI & Argument parsing
clap = { version = "4.5", features = ["derive"] }

# Colored terminal output
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Time & date formatting
chrono = "0.4"

# Optional: Only needed if you plan to parse Cargo.toml deeply later
# toml = "0.8"

[profile.dev]
debug = true

[profile.release]
opt-level = "z"        # Optimize for size
strip = true           # Strip symbols from binary
lto = true             # Link Time Optimization
codegen-units = 1      # Better optimization across crate
